syntax = "proto3";

option csharp_namespace = "YandexTranslateService";

package translation;

service Translator {
  rpc Translate(TranslateRequest) returns (TranslateResponse);
  rpc GetServiceInfo(Empty) returns (ServiceInfoResponse);
}

message TranslateRequest {
  repeated string texts = 1; 
  string source_lang = 2;     
  string target_lang = 3;     
}

message TranslateResponse {
  repeated string translations = 1; 
}

message ServiceInfoResponse {
  string external_service = 1;
  string cache_type = 2; 
  int32 cache_size = 3; 
}

message Empty {

}